2025-12-31T01:55:54Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20610115096 # 855
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-31
* notice: last 14d: unq all: 0 0
* notice: prev accum: outdated-unq outdated-all / unq all: 142 390 / 143 391
* notice: next accum: outdated-unq outdated-all / unq all: 143 391 / 143 391
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-12-14] / []

2025-12-27T01:52:10Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20532726378 # 851
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-27
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 141 389 / 143 391
* notice: next accum: outdated-unq outdated-all / unq all: 142 390 / 143 391
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-12-12] / []

2025-12-19T01:53:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20357209175 # 843
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-19
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 140 388 / 143 391
* notice: next accum: outdated-unq outdated-all / unq all: 141 389 / 143 391
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-12-04] / []

2025-12-15T01:57:34Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20218015580 # 839