@@ -1,12 +1,12 @@
 {
-  "timestamp" : "2025-12-31T01:55:54Z",
+  "timestamp" : "2026-01-29T01:44:02Z",
   "count_outdated" : 391,
   "uniques_outdated" : 143,
   "count" : 391,
   "uniques" : 143,
   "views" : [
     {
-      "timestamp": "2025-12-16T00:00:00Z",
+      "timestamp": "2026-01-13T00:00:00Z",
       "count": 0,
       "count_minmax": [ 0, 0 ],
       "count_decinc": [ 0, 0 ],
@@ -15,7 +15,7 @@
       "uniques_decinc": [ 0, 0 ]
     },
     {
-      "timestamp": "2025-12-17T00:00:00Z",
+      "timestamp": "2026-01-14T00:00:00Z",
       "count": 0,
       "count_minmax": [ 0, 0 ],
       "count_decinc": [ 0, 0 ],
@@ -24,7 +24,7 @@
       "uniques_decinc": [ 0, 0 ]
     },
     {
-      "timestamp": "2025-12-18T00:00:00Z",
+      "timestamp": "2026-01-15T00:00:00Z",
       "count": 0,
       "count_minmax": [ 0, 0 ],
       "count_decinc": [ 0, 0 ],
@@ -33,7 +33,7 @@
       "uniques_decinc": [ 0, 0 ]
     },
     {
-      "timestamp": "2025-12-19T00:00:00Z",
+      "timestamp": "2026-01-16T00:00:00Z",
       "count": 0,
       "count_minmax": [ 0, 0 ],
       "count_decinc": [ 0, 0 ],
@@ -42,7 +42,7 @@
       "uniques_decinc": [ 0, 0 ]
     },
     {
-      "timestamp": "2025-12-20T00:00:00Z",
+      "timestamp": "2026-01-17T00:00:00Z",
       "count": 0,
       "count_minmax": [ 0, 0 ],
       "count_decinc": [ 0, 0 ],
@@ -51,7 +51,7 @@
       "uniques_decinc": [ 0, 0 ]
     },
     {
-      "timestamp": "2025-12-21T00:00:00Z",
+      "timestamp": "2026-01-18T00:00:00Z",
       "count": 0,
       "count_minmax": [ 0, 0 ],
       "count_decinc": [ 0, 0 ],
@@ -60,7 +60,7 @@
       "uniques_decinc": [ 0, 0 ]
     },
     {
-      "timestamp": "2025-12-22T00:00:00Z",
+      "timestamp": "2026-01-19T00:00:00Z",
       "count": 0,
       "count_minmax": [ 0, 0 ],
       "count_decinc": [ 0, 0 ],
@@ -69,7 +69,7 @@
       "uniques_decinc": [ 0, 0 ]
     },
     {
-      "timestamp": "2025-12-23T00:00:00Z",
+      "timestamp": "2026-01-20T00:00:00Z",
       "count": 0,
       "count_minmax": [ 0, 0 ],
       "count_decinc": [ 0, 0 ],
@@ -78,7 +78,7 @@
       "uniques_decinc": [ 0, 0 ]
     },
     {
-      "timestamp": "2025-12-24T00:00:00Z",
+      "timestamp": "2026-01-21T00:00:00Z",
       "count": 0,
       "count_minmax": [ 0, 0 ],
       "count_decinc": [ 0, 0 ],
@@ -87,7 +87,7 @@
       "uniques_decinc": [ 0, 0 ]
     },
     {
-      "timestamp": "2025-12-25T00:00:00Z",
+      "timestamp": "2026-01-22T00:00:00Z",
       "count": 0,
       "count_minmax": [ 0, 0 ],
       "count_decinc": [ 0, 0 ],
@@ -96,7 +96,7 @@
       "uniques_decinc": [ 0, 0 ]
     },
     {
-      "timestamp": "2025-12-26T00:00:00Z",
+      "timestamp": "2026-01-23T00:00:00Z",
       "count": 0,
       "count_minmax": [ 0, 0 ],
       "count_decinc": [ 0, 0 ],
@@ -105,7 +105,7 @@
       "uniques_decinc": [ 0, 0 ]
     },
     {
-      "timestamp": "2025-12-27T00:00:00Z",
+      "timestamp": "2026-01-24T00:00:00Z",
       "count": 0,
       "count_minmax": [ 0, 0 ],
       "count_decinc": [ 0, 0 ],
@@ -114,7 +114,7 @@
       "uniques_decinc": [ 0, 0 ]
     },
     {
-      "timestamp": "2025-12-28T00:00:00Z",
+      "timestamp": "2026-01-25T00:00:00Z",
       "count": 0,
       "count_minmax": [ 0, 0 ],
       "count_decinc": [ 0, 0 ],
@@ -123,7 +123,7 @@
       "uniques_decinc": [ 0, 0 ]
     },
     {
-      "timestamp": "2025-12-29T00:00:00Z",
+      "timestamp": "2026-01-26T00:00:00Z",
       "count": 0,
       "count_minmax": [ 0, 0 ],
       "count_decinc": [ 0, 0 ],
