@@ -1,3 +1,12 @@
+2026-01-29T01:44:02Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21462406435 # 861
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-29
+* notice: last 14d: unq all: 0 0
+* notice: prev accum: outdated-unq outdated-all / unq all: 143 391 / 143 391
+* notice: next accum: outdated-unq outdated-all / unq all: 143 391 / 143 391
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-12-16 2025-12-17 2025-12-18 2025-12-19 2025-12-20 2025-12-21 2025-12-22 2025-12-23 2025-12-24 2025-12-25 2025-12-26 2025-12-27 2025-12-28 2025-12-29] / []
+
 2025-12-31T01:55:54Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20610115096 # 855
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-31
